feat (admin-shop) apply comment #43
