# apps/admin.app/src/app/feature/comment/api/comment-api.endpoint.ts
@@ -1,0 +1,8 @@
+const base = '/api/comment';
+
+export const CommentsEndpoint = {
+  base: `${base}`,
+  byId: (id: number) => `${base}/${id}`,
+  confirmed: (id: number) => `${base}/${id}/confirmed`,
+  reject: (id: number) => `${base}/${id}/reject`
+} as const;
